style: fix white color and check icon visibility, some changes

--- a/src/container/Home/Layouts/Category.module.scss
+++ b/src/container/Home/Layouts/Category.module.scss
@@ -7,10 +7,12 @@
         }
     }
     :global(.react-multiple-carousel__arrow) {
+        transition: all 0.2s;
         z-index: 20;
         opacity: 0.5;
         &:hover {
-            opacity: 0.7;
+            background-color: $primary-clr-5;
+            opacity: 1;
         }
     }
 }
