--- a/src/container/Product/Product.module.scss
+++ b/src/container/Product/Product.module.scss
@@ -73,13 +73,20 @@ button {
 
 .color {
     display: inline-block;
-    border: none;
-    border-radius: 50%;
+    margin-right: 10px;
     width: 2.4rem;
     height: 2.4rem;
-    margin-right: 10px;
+    border-radius: 50%;
+    border: 1px solid $gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $white-clr;
+
     svg {
         font-size: 2.4rem;
+        stroke: $gray;
+        stroke-width: 1;
     }
 }
 
